syntax = "proto3";

package storage;

import "google/protobuf/timestamp.proto";

option cc_enable_arenas = true;
option go_package = "./;storage";
option java_package = "io.stackrox.proto.storage";

// Next available tag: 13
message ProcessIndicator {
  // A unique UUID for the Indicator message
  string id = 1; // @gotags: search:"Process ID,store,hidden"  sql:"pk,type(uuid)"

  string deployment_id = 2; // @gotags: search:"Deployment ID,store,hidden" policy:",prefer-parent" sql:"index=hash,fk(Deployment:id),no-fk-constraint,type(uuid)"
  reserved 10; // Previously deployment_state_ts

  string container_name = 3; // @gotags: search:"Container Name,hidden" policy:",prefer-parent"
  // Pod name
  string pod_id = 4; // @gotags: search:"Pod ID,hidden"
  string pod_uid = 11; // @gotags: search:"Pod UID,hidden" sql:"index=hash,type(uuid)"

  // The emit timestamp of the message. Used for measuring latency
  reserved 5;

  // A process signal message passed from Collector to Sensor
  ProcessSignal signal = 6;

  string cluster_id = 7; // @gotags: search:"Cluster ID,store,hidden" policy:",prefer-parent" sql:"type(uuid)"
  string namespace = 8; // @gotags: search:"Namespace,store,hidden" policy:",prefer-parent"

  google.protobuf.Timestamp container_start_time = 9;

  string image_id = 12;
}

// This is the unique key we store process indicators under in Bolt.
// This is stored in the DB, so please follow proto compatibility rules for it,
// OR discard existing values and repopulate it on startup.
message ProcessIndicatorUniqueKey {
  string pod_id = 1;
  string container_name = 2;
  string process_name = 3;
  string process_exec_file_path = 4;
  string process_args = 5;
}

// This is the processes information which is added to endpoint data
message NetworkProcessUniqueKey {
  string process_name = 1;
  string process_exec_file_path = 2;
  string process_args = 3;
}

message ProcessSignal {
  // A unique UUID for identifying the message
  // We have this here instead of at the top level
  // because we want to have each message to be
  // self contained.
  string id = 1;

  // ID of container associated with this process
  string container_id = 2; // @gotags: search:"Container ID,hidden"

  // Process creation time
  google.protobuf.Timestamp time = 3; // @gotags: search:"Process Creation Time,hidden"

  // Process name
  string name = 4; // @gotags: search:"Process Name"

  // Process arguments
  string args = 5; // @gotags: search:"Process Arguments"

  // Process executable file path
  string exec_file_path = 6; // @gotags: search:"Process Path"

  // Host process ID
  uint32 pid = 7;

  // Real user ID
  uint32 uid = 8; // @gotags: search:"Process UID"

  // Real group ID
  uint32 gid = 9;

  // Process Lineage
  repeated string lineage = 10 [deprecated = true];

  // Signal origin
  bool scraped = 11;

  // Process LineageInfo
  repeated LineageInfo lineage_info = 12;

  message LineageInfo {
    uint32 parent_uid = 1;
    string parent_exec_file_path = 2; // @gotags: policy:"Process Ancestor"
  }
}
